# musicbrainz-data

./: .ghci  .gitignore  .gitmodules  HACKING.md  README.md  jenkins.sh  musicbrainz-data.cabal  test.cfg.example  todo.org
src/: MusicBrainz.hs
src/Database/PostgreSQL/Simple/: Arrays.hs
src/MusicBrainz/: Alias.hs  Annotation.hs  Artist.hs  Artist.hs-boot  ArtistCredit.hs  Country.hs  Data.hs  Edit.hs  EditApplication.hs  Editor.hs  Entity.hs  Gender.hs  Generic.hs  Generic.hs-boot  IPI.hs  ISNI.hs  ISRC.hs  ISWC.hs  Label.hs  Label.hs-boot  Language.hs  Lens.hs  MBID.hs  Merge.hs  Merge.hs-boot  Monad.hs  PartialDate.hs  Recording.hs  Recording.hs-boot  Ref.hs  Relationship.hs  Release.hs  Release.hs-boot  ReleaseGroup.hs  ReleaseGroup.hs-boot  Revision.hs  Revision.hs-boot  Schema.hs  Script.hs  Tree.hs  (+8 more)
src/MusicBrainz/Class/: Add.hs  Cleanup.hs  Create.hs  FindLatest.hs  GetEntity.hs  MasterRevision.hs  NewEntityRevision.hs  RealiseTree.hs  ResolveReference.hs  RootTable.hs  Update.hs  ViewRevision.hs
src/MusicBrainz/Data/: Add.hs  Alias.hs  AliasType.hs  Annotation.hs  Artist.hs  Artist.hs-boot  ArtistCredit.hs  ArtistType.hs  Cleanup.hs  CoreEntity.hs  Country.hs  Create.hs  Edit.hs  Editor.hs  FindLatest.hs  Gender.hs  Generic.hs  GetEntity.hs  IPI.hs  ISNI.hs  Label.hs  Label.hs-boot  LabelType.hs  Language.hs  MediumFormat.hs  Merge.hs  Recording.hs  Recording.hs-boot  Relationship.hs  Release.hs  Release.hs-boot  ReleaseGroup.hs  ReleaseGroup.hs-boot  ReleaseGroupType.hs  ReleasePackaging.hs  ReleaseStatus.hs  Revision.hs  Script.hs  Tree.hs  Update.hs  (+6 more)
src/MusicBrainz/Data/Generic/: Alias.hs  Annotation.hs  Create.hs  Edit.hs  IPI.hs  Relationship.hs  Revision.hs
src/MusicBrainz/Data/Relationship/: Internal.hs  Internal.hs-boot
src/MusicBrainz/Data/Revision/: Internal.hs
src/MusicBrainz/Relationship/: Internal.hs
src/MusicBrainz/Revision/: Internal.hs
src/MusicBrainz/Types/: Internal.hs
test/data/: test-data.sql  test-schema.sql
test/framework/Test/: MusicBrainz.hs
test/suite/: Tests.hs
test/suite/MusicBrainz/AliasType/: Tests.hs
test/suite/MusicBrainz/Artist/: Tests.hs
test/suite/MusicBrainz/ArtistCredit/: Tests.hs
test/suite/MusicBrainz/ArtistType/: Tests.hs
test/suite/MusicBrainz/Country/: Tests.hs
test/suite/MusicBrainz/Data/: ClassTests.hs
test/suite/MusicBrainz/Data/AliasType/: Tests.hs
test/suite/MusicBrainz/Data/Artist/: Tests.hs
test/suite/MusicBrainz/Data/ArtistCredit/: Tests.hs
test/suite/MusicBrainz/Data/ArtistType/: Tests.hs
test/suite/MusicBrainz/Data/Country/: Tests.hs
test/suite/MusicBrainz/Data/Edit/: Tests.hs
test/suite/MusicBrainz/Data/Editor/: Tests.hs
test/suite/MusicBrainz/Data/Gender/: Tests.hs
test/suite/MusicBrainz/Data/Label/: Tests.hs
test/suite/MusicBrainz/Data/LabelType/: Tests.hs
test/suite/MusicBrainz/Data/Language/: Tests.hs
test/suite/MusicBrainz/Data/MediumFormat/: Tests.hs
test/suite/MusicBrainz/Data/Recording/: Tests.hs
test/suite/MusicBrainz/Data/Relationship/: Tests.hs
test/suite/MusicBrainz/Data/Release/: Tests.hs
test/suite/MusicBrainz/Data/ReleaseGroup/: Tests.hs
test/suite/MusicBrainz/Data/ReleaseGroupType/: Tests.hs
test/suite/MusicBrainz/Data/ReleasePackaging/: Tests.hs
test/suite/MusicBrainz/Data/ReleaseStatus/: Tests.hs
test/suite/MusicBrainz/Data/Script/: Tests.hs
test/suite/MusicBrainz/Data/Url/: Tests.hs
test/suite/MusicBrainz/Data/Work/: Tests.hs
test/suite/MusicBrainz/Data/WorkType/: Tests.hs
test/suite/MusicBrainz/Edit/: Tests.hs
test/suite/MusicBrainz/Editor/: Tests.hs
test/suite/MusicBrainz/Gender/: Tests.hs
test/suite/MusicBrainz/Label/: Tests.hs
test/suite/MusicBrainz/LabelType/: Tests.hs
test/suite/MusicBrainz/Language/: Tests.hs
test/suite/MusicBrainz/MediumFormat/: Tests.hs
test/suite/MusicBrainz/Recording/: Tests.hs
test/suite/MusicBrainz/Relationship/: Tests.hs
test/suite/MusicBrainz/Release/: Tests.hs
test/suite/MusicBrainz/ReleaseGroup/: Tests.hs
test/suite/MusicBrainz/ReleaseGroupType/: Tests.hs
test/suite/MusicBrainz/ReleasePackaging/: Tests.hs
test/suite/MusicBrainz/ReleaseStatus/: Tests.hs
test/suite/MusicBrainz/Schema/: Tests.hs
test/suite/MusicBrainz/Script/: Tests.hs
test/suite/MusicBrainz/Types/: Tests.hs
test/suite/MusicBrainz/Url/: Tests.hs
test/suite/MusicBrainz/Work/: Tests.hs
test/suite/MusicBrainz/WorkType/: Tests.hs
test/suite/Test/: MusicBrainz.hs
test/suite/Test/MusicBrainz/: CommonTests.hs  Data.hs  Repository.hs
