name: musicbrainz-data
description: Haskell API to interact with the MusicBrainz database
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: 2012 MetaBrainz Foundation
author: MetaBrainz Foundation

Library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5 && < 4.6,
    blaze-builder >= 0.3 && < 0.4,
    mtl >= 2.1.1 && < 2.2,
    postgresql-simple >= 0.2.4.1 && < 0.3,
    text >= 0.11 && < 0.12,
    transformers >= 0.3 && < 0.4,
    uuid >= 1.2.7 && < 1.3
  exposed-modules:
    MusicBrainz
    MusicBrainz.Schema
    MusicBrainz.Types

