name: musicbrainz-data
description: Haskell API to interact with the MusicBrainz database
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: 2012 MetaBrainz Foundation
author: MetaBrainz Foundation

Library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5 && < 4.7,
    blaze-builder >= 0.3 && < 0.4,
    bytestring >= 0.9.2.1 && < 0.11,
    containers >= 0.4.2.1 && < 0.6,
    lens >= 3.4 && < 3.7,
    MonadCatchIO-mtl >= 0.3.0.0 && <0.4,
    mtl >= 2.1.1 && < 2.2,
    postgresql-simple >= 0.2.4.1 && < 0.3,
    text >= 0.11 && < 0.12,
    transformers >= 0.3 && < 0.4,
    uuid >= 1.2.7 && < 1.3
  exposed-modules:
    MusicBrainz
    MusicBrainz.Data
    MusicBrainz.Data.Alias
    MusicBrainz.Data.Annotation
    MusicBrainz.Data.Artist
    MusicBrainz.Data.ArtistCredit
    MusicBrainz.Data.ArtistType
    MusicBrainz.Data.Country
    MusicBrainz.Data.Create
    MusicBrainz.Data.Edit
    MusicBrainz.Data.Editor
    MusicBrainz.Data.FindLatest
    MusicBrainz.Data.Gender
    MusicBrainz.Data.IPI
    MusicBrainz.Data.Label
    MusicBrainz.Data.LabelType
    MusicBrainz.Data.Language
    MusicBrainz.Data.Merge
    MusicBrainz.Data.Recording
    MusicBrainz.Data.Relationship
    MusicBrainz.Data.Release
    MusicBrainz.Data.ReleaseGroup
    MusicBrainz.Data.ReleaseGroupType
    MusicBrainz.Data.ReleasePackaging
    MusicBrainz.Data.ReleaseStatus
    MusicBrainz.Data.Revision
    MusicBrainz.Data.Script
    MusicBrainz.Data.Tree
    MusicBrainz.Data.Update
    MusicBrainz.Edit
    MusicBrainz.Lens
    MusicBrainz.Merge
    MusicBrainz.Schema
    MusicBrainz.Types
  other-modules:
    MusicBrainz.Data.Generic
    MusicBrainz.Data.Relationship.Internal
    MusicBrainz.Data.Revision.Internal
    MusicBrainz.Monad
    MusicBrainz.Types.Internal
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

Test-Suite integration-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test/suite
  build-depends:
    base >= 4.5 && < 4.7,
    containers >= 0.4.2.1 && < 0.6,
    HUnit >= 1.2.4.2 && < 1.3,
    lens >= 3.4 && < 3.7,
    MonadCatchIO-mtl >= 0.3.0.0 && <0.4,
    musicbrainz-data,
    postgresql-simple >= 0.2.4.1 && < 0.3,
    QuickCheck >= 2.4.2 && < 2.6,
    test-framework >= 0.6.1 && <0.7,
    test-framework-hunit >= 0.2.7 && <0.3,
    test-framework-quickcheck2 >= 0.2.12.3 && <0.3,
    transformers >= 0.3 && < 0.4,
    uuid >= 1.2.7 && < 1.3
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

