name: musicbrainz-data
description: Haskell API to interact with the MusicBrainz database
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: 2012 MetaBrainz Foundation
author: MetaBrainz Foundation

Library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    attoparsec >= 0.8.5.3,
    base >= 4.5 && < 4.7,
    blaze-builder >= 0.3 && < 0.4,
    bytestring >= 0.9.2.1 && < 0.11,
    containers >= 0.4.2.1 && < 0.6,
    diff3 >= 0.2.0.2,
    errors,
    exceptions >= 0.2,
    lens >= 3.9 && <3.10,
    monad-loops >= 0.3.1.1,
    mtl >= 2.0.1.0 && < 2.2,
    nats >= 0.1,
    network >= 2.3.0.10,
    parsec >= 3.1.2,
    postgresql-simple >= 0.3.1 && < 0.4,
    tagged,
    text >= 0.11.1.13 && < 0.12,
    time >= 1.4,
    transformers >= 0.2.2.0 && < 0.4,
    uuid >= 1.2.7 && < 1.3,
    vector
  exposed-modules:
    MusicBrainz.Monad
    MusicBrainz.Alias
    MusicBrainz.Annotation
    MusicBrainz.Artist
    MusicBrainz.ArtistCredit
    MusicBrainz.Class.Cleanup
    MusicBrainz.Class.Update
    MusicBrainz.Country
    MusicBrainz.EditApplication
    MusicBrainz.Gender
    MusicBrainz.IPI
    MusicBrainz.ISNI
    MusicBrainz.ISRC
    MusicBrainz.ISWC
    MusicBrainz.Label
    MusicBrainz.Language
    MusicBrainz.MBID
    MusicBrainz.PartialDate
    MusicBrainz.Recording
    MusicBrainz.Relationship
    MusicBrainz.Relationship.Internal
    MusicBrainz.Release
    MusicBrainz.ReleaseGroup
    MusicBrainz.Script
    MusicBrainz.URL
    MusicBrainz.Work
    MusicBrainz.Util
    MusicBrainz.Versioning
  other-modules:
    MusicBrainz.Generic
    MusicBrainz.Merge
    MusicBrainz.Lens
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind
               -Werror

Test-Suite integration-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
    test/suite
    test/framework
  build-depends:
    base >= 4.5 && < 4.7,
    configurator >= 0.1,
    containers >= 0.4.2.1 && < 0.6,
    HUnit >= 1.2.4.2 && < 1.3,
    lens >= 3.9 &&<3.10,
    exceptions >= 0.2,
    musicbrainz-data,
    network >= 2.3.0.10,
    postgresql-simple >= 0.3.1 && < 0.4,
    QuickCheck >= 2.4.2 && < 2.7,
    test-framework >= 0.6.1 && <0.9,
    test-framework-hunit >= 0.2.7 && <0.4,
    test-framework-quickcheck2 >= 0.2.12.3 && <0.4,
    time >= 1.4,
    transformers >= 0.2.2.0 && < 0.4,
    uuid >= 1.2.7 && < 1.3,
    vector
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -threaded -Werror

